monitoring/cluster/alert-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerts
  namespace: rackspace-monitoring
  labels:
    k8s-app: alert-manager
spec:
  selector:
    alertmanager: "alert-manager"
  ports:
  - port: 9093
    protocol: TCP
    targetPort: web
